# CPP-Terminal-Chatroom

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  Makefile  README.md  docker-compose.demo.yml  docker-compose.server.yml  docker-compose.test.yml
.github/workflows/: ci.yml
config/: cert.pem  key.pem
data/demo/: chat_history.json  users.json
docker/: auto_chat.expect  client-entrypoint.sh  server-entrypoint.sh
include/: ChatManager.hpp  FdWrapper.hpp  Framing.hpp  Logging.hpp  Metrics.hpp  RateLimiter.hpp  ThreadPool.hpp  User.hpp  UserManager.hpp  utils.hpp
scripts/: analyze_metrics.py  paired_chat_test.py
src/: ChatManager.cpp  RateLimiter.cpp  ThreadPool.cpp  User.cpp  UserManager.cpp  client.cpp  server.cpp
tests/: chat_manager_test.cpp  framing_test.cpp  rate_limiter_test.cpp  thread_pool_test.cpp  user_manager_test.cpp  user_test.cpp  utils_test.cpp
